# ignite-cpp

./: .gitignore  CMakeLists.txt  README.md  callback.cpp  callback.h  logger.h  mnist.cpp  mnist.h  model.h  test.cpp  trainer.cpp  trainer.h
libtorch/: build-version
libtorch/include/ATen/: CPUByteType.h  CPUCharType.h  CPUDoubleType.h  CPUFloatType.h  CPUHalfType.h  CPUIntType.h  CPULongType.h  CPUShortType.h  CUDAByteType.h  CUDACharType.h  CUDADoubleType.h  CUDAFloatType.h  CUDAHalfType.h  CUDAIntType.h  CUDALongType.h  CUDAShortType.h  Functions.h  NativeFunctions.h  SparseCPUByteType.h  SparseCPUCharType.h  SparseCPUDoubleType.h  SparseCPUFloatType.h  SparseCPUIntType.h  SparseCPULongType.h  SparseCPUShortType.h  SparseCUDAByteType.h  SparseCUDACharType.h  SparseCUDADoubleType.h  SparseCUDAFloatType.h  SparseCUDAIntType.h  SparseCUDALongType.h  SparseCUDAShortType.h  TypeDefault.h  TypeExtendedInterface.h
libtorch/include/caffe2/core/: macros.h
libtorch/lib/: libc10.dylib  libcaffe2_detectron_ops.dylib  libcaffe2_module_test_dynamic.dylib  libcaffe2_observers.dylib
libtorch/share/cmake/ATen/: ATenConfig.cmake
